Moved about me information to the left to avoid wrapping blog URL

--- a/styles.less
+++ b/styles.less
@@ -203,11 +203,11 @@ pre.cli .behind {
 
 .slide.about-me .pull-right {
     font-size: 180%;
-    margin-top: -60px;
+    margin-top: -90px;
     position: absolute;
     right: 20px;
     top: 45%;
-    width: 50%;
+    width: 55%;
 }
 
 .slide img {
